[gd_scene load_steps=50 format=3 uid="uid://658v4co7jd07"]

[ext_resource type="Texture2D" uid="uid://1mot2lsduok2" path="res://assets/textures/player/AnimationSheet_Character.png" id="1_7j80i"]
[ext_resource type="Script" uid="uid://becf2c5pbtjn7" path="res://src/entities/player/player.gd" id="1_7omxl"]
[ext_resource type="Shader" uid="uid://d36k77idc43f0" path="res://src/common/shaders/entity.gdshader" id="2_hp4bs"]
[ext_resource type="AudioStream" uid="uid://ctcx2lqo7vnxy" path="res://assets/audio/Super Dialogue Audio Pack v1/Step 2 - Audio Files/2 - Confirmation/Female/Karen Cenon/confirmation_1_karen.wav" id="2_ihjo1"]
[ext_resource type="AudioStream" uid="uid://fxwcrkns7ryr" path="res://assets/audio/Super Dialogue Audio Pack v1/Step 2 - Audio Files/2 - Confirmation/Female/Karen Cenon/confirmation_2_karen.wav" id="3_dk1vr"]
[ext_resource type="Script" uid="uid://dml80icbdg7ls" path="res://scripts/ability/core/ability_controller.gd" id="3_u4c7w"]
[ext_resource type="AudioStream" uid="uid://dpoy3uwtga34d" path="res://assets/audio/Super Dialogue Audio Pack v1/Step 2 - Audio Files/2 - Confirmation/Female/Karen Cenon/confirmation_3_karen.wav" id="4_34jf3"]
[ext_resource type="PackedScene" uid="uid://cdqlge8i51rl8" path="res://scenes/ability/slash_ability.tscn" id="4_hsluc"]
[ext_resource type="Script" uid="uid://clo7b3t1pq370" path="res://resources/stats/audio_config.gd" id="5_u7b46"]
[ext_resource type="PackedScene" uid="uid://cjd3rf4cwyok1" path="res://scenes/ability/weapon_throw_ability.tscn" id="6_hp4bs"]
[ext_resource type="Texture2D" uid="uid://uy6223ctvcdh" path="res://assets/textures/weapons/Sprites/lightsaber_blue.png" id="6_oh5ij"]
[ext_resource type="PackedScene" uid="uid://bxh4m30iibcn5" path="res://scenes/ability/dash_ability.tscn" id="11_34jf3"]
[ext_resource type="Script" uid="uid://bpuvnxlh6vwu6" path="res://src/common/components/footstep_effect.gd" id="12_dk1vr"]
[ext_resource type="Script" uid="uid://b4noihxhrlpvq" path="res://resources/stats/player_stats.gd" id="13_stats"]

[sub_resource type="Resource" id="Resource_j4wxg"]
script = ExtResource("5_u7b46")
audio_streams = Array[AudioStream]([ExtResource("2_ihjo1"), ExtResource("3_dk1vr"), ExtResource("4_34jf3")])
volume_db = -1.0
bus = &"sfx"
metadata/_custom_type_script = "uid://clo7b3t1pq370"

[sub_resource type="Resource" id="SubResource_player_stats"]
script = ExtResource("13_stats")
speed = 100.0
damage_text_color = Color(0.698039, 0.133333, 0.133333, 1)
metadata/_custom_type_script = "uid://clo7b3t1pq370"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_player"]
radius = 8.0
height = 24.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g2vtq"]
shader = ExtResource("2_hp4bs")
shader_parameter/hurt_color = Vector4(1, 1, 1, 1)
shader_parameter/is_hurt = false

[sub_resource type="AtlasTexture" id="AtlasTexture_hp4bs"]
atlas = ExtResource("1_7j80i")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2vtq"]
atlas = ExtResource("1_7j80i")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fvbb"]
atlas = ExtResource("1_7j80i")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml7e8"]
atlas = ExtResource("1_7j80i")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihjo1"]
atlas = ExtResource("1_7j80i")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk1vr"]
atlas = ExtResource("1_7j80i")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34jf3"]
atlas = ExtResource("1_7j80i")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7b46"]
atlas = ExtResource("1_7j80i")
region = Rect2(224, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7omxl"]
atlas = ExtResource("1_7j80i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c7ea"]
atlas = ExtResource("1_7j80i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4c7w"]
atlas = ExtResource("1_7j80i")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sl1v"]
atlas = ExtResource("1_7j80i")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsluc"]
atlas = ExtResource("1_7j80i")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q7bi"]
atlas = ExtResource("1_7j80i")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne3il"]
atlas = ExtResource("1_7j80i")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kai0q"]
atlas = ExtResource("1_7j80i")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxvsy"]
atlas = ExtResource("1_7j80i")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhqjh"]
atlas = ExtResource("1_7j80i")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_udxxx"]
atlas = ExtResource("1_7j80i")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3r7j"]
atlas = ExtResource("1_7j80i")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4wxg"]
atlas = ExtResource("1_7j80i")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bup7g"]
atlas = ExtResource("1_7j80i")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ja17"]
atlas = ExtResource("1_7j80i")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4iqv"]
atlas = ExtResource("1_7j80i")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42h83"]
atlas = ExtResource("1_7j80i")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuf2t"]
atlas = ExtResource("1_7j80i")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrjdb"]
atlas = ExtResource("1_7j80i")
region = Rect2(192, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk4ol"]
atlas = ExtResource("1_7j80i")
region = Rect2(224, 256, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hsluc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp4bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2vtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fvbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml7e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihjo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk1vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34jf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7b46")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7omxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c7ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4c7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sl1v")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsluc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q7bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne3il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kai0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxvsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhqjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udxxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3r7j")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4wxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bup7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ja17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4iqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42h83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuf2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrjdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk4ol")
}],
"loop": false,
"name": &"throw",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hp4bs"]

[sub_resource type="Curve" id="Curve_ihjo1"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 1.5170277), 0.0, 0.0, 0, 0, Vector2(1, 0.49071193), 0.0, 0.0, 0, 0]
point_count = 2

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("weapon")]
script = ExtResource("1_7omxl")
weapon = NodePath("Weapon")
footstep_clip = SubResource("Resource_j4wxg")
stats = SubResource("SubResource_player_stats")

[node name="PhysicsCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_player")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_g2vtq")
sprite_frames = SubResource("SpriteFrames_hsluc")
animation = &"run"
autoplay = "idle"
frame_progress = 0.45839232

[node name="AbilityController" type="Node" parent="."]
script = ExtResource("3_u4c7w")

[node name="Slash" parent="AbilityController" instance=ExtResource("4_hsluc")]

[node name="WeaponThrowAbility" parent="AbilityController" instance=ExtResource("6_hp4bs")]

[node name="DashAbility" parent="AbilityController" instance=ExtResource("11_34jf3")]
cooldown = 0.2

[node name="Weapon" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8.549998, 0.45000172)
rotation = 0.7853982
scale = Vector2(0.7603429, 0.52464014)
texture = ExtResource("6_oh5ij")

[node name="Area2D" type="Area2D" parent="."]

[node name="HurtboxCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_hp4bs")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="FootstepEffect" type="Node2D" parent="."]
visible = false
position = Vector2(1, 16)
scale = Vector2(0.2, 0.2)
script = ExtResource("12_dk1vr")

[node name="CPUParticles2D" type="CPUParticles2D" parent="FootstepEffect"]
position = Vector2(6.6666656, -1.4305115e-06)
emitting = false
amount = 10
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 7.0
direction = Vector2(0, -1)
spread = 120.0
gravity = Vector2(0, 80)
initial_velocity_min = 80.0
initial_velocity_max = 120.0
scale_amount_curve = SubResource("Curve_ihjo1")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="FootstepEffect"]
position = Vector2(-13.333333, -1.4305115e-06)
emitting = false
amount = 10
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 7.0
direction = Vector2(0, -1)
spread = 120.0
gravity = Vector2(0, 80)
initial_velocity_min = 80.0
initial_velocity_max = 120.0
scale_amount_curve = SubResource("Curve_ihjo1")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
